plugins {
    id 'org.springframework.boot' version '2.7.2'
    id 'io.spring.dependency-management' version '1.0.12.RELEASE'
    id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '16'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.data:spring-data-commons:2.7.2'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.8'
    implementation 'org.projectlombok:lombok'
    implementation 'org.jetbrains:annotations:20.1.0'
    implementation 'io.reactivex.rxjava3:rxjava:3.0.9'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'mysql:mysql-connector-java'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'


    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.jeasy:easy-random-core:5.0.0'

    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
    testRuntimeOnly('org.junit.platform:junit-platform-engine:1.8.2')
    testRuntimeOnly('org.junit.platform:junit-platform-commons:1.8.2')

    // AspectJ 의존성
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.aspectj:aspectjrt:1.9.6'

    testImplementation 'org.springframework.boot:spring-boot-starter-aop'
    testImplementation 'org.aspectj:aspectjrt:1.9.6'

}

tasks.named('test') {
    maxHeapSize = "2048m"
    useJUnitPlatform()
}
